--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           >
           and
           <a href="hostin-project-1.netlify.app" target="_blank"
-            >hosted on Netlify</a
+            >hosted on Netlify.</a
           >
         </p>
       </footer>
