--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
             on GitHub</a
           >
           and
-          <a
-            href="https://67894cfe61f67d4b13164864--hostin-project-1.netlify.app"
-            target="_blank"
+          <a href="https://hostin-project-1.netlify.app" target="_blank"
             >hosted on Netlify.</a
           >
         </p>
